--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,5 @@
     </div>
 </form>
 
-<p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
-<p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
+<p>The local date and time is {{ current_time.strftime('%Y-%m-%d %H:%M:%S') }}.</p>
 {% endblock %}
-
-
