--- a/templates/index.html
+++ b/templates/index.html
@@ -26,4 +26,22 @@
 </form>
 
 <p>The local date and time is {{ current_time.strftime('%Y-%m-%d %H:%M:%S') }}.</p>
+
+<h2>Usuários</h2>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Nome</th>
+            <th>Função</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for user in users %}
+        <tr>
+            <td>{{ user.name }}</td>
+            <td>{{ user.role }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
